fix hamburger icon visibiity in desktop view

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -142,10 +142,10 @@
 
 
 @media only screen and (min-width: 901px) {
-  .arrows {
+  .arrows, .hamburger {
     display: none;
   }
-  
+
   .socialMediaLogo {
       width: 15%;
       max-width: 70px;
